Image insertion and notebook setup

--- a/demos/dm-01-automl-object-detection-using-api.ipynb
+++ b/demos/dm-01-automl-object-detection-using-api.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "### Summary\n",
     "\n",
-    "##### In this notebook, we'll use Vertex AI to train customer object detection model using image dataset. After training, we will create an endpoint deploy the model to an endpoint and deploy the model to that endpoint. Then we will use the deploymed model for online prediction. "
+    "In this notebook, we'll use Vertex AI to train customer object detection model using image dataset. After training, we will create an endpoint deploy the model to an endpoint and deploy the model to that endpoint. Then we will use the deploymed model for online prediction. "
    ]
   },
   {
@@ -58,9 +58,118 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6f17848e-5d57-4c53-b97b-f4f60b056757",
+   "metadata": {},
+   "source": [
+    "#### Setup resources"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "ff9461ff-ff59-4b5d-b79e-cad0d1f56bea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load required packages to run the notebook\n",
+    "\n",
+    "import json\n",
+    "import requests\n",
+    "from typing import List, Union\n",
+    "\n",
+    "from google.cloud import bigquery\n",
+    "from google.cloud import aiplatform\n",
+    "from google.cloud.aiplatform.gapic.schema import trainingjob"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "214c27bf-6326-4056-b00e-641143102492",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Setup variables for notebooks\n",
+    "\n",
+    "LOCATION = \"us-central1\" \n",
+    "PROJECT_ID = \"nishitp-daml\"\n",
+    "DATASET_ID = \"4715062101670887424\"\n",
+    "EXPORT_DIRECTORY = \"gs://ds-ml-demos/packages-image-metadata/\"\n",
+    "ANNOTATION_SET_ID = \"package-classification_iod\"\n",
+    "FILTER = f\"labels.aiplatform.googleapis.com/annotation_set_name={ANNOTATION_SET_ID}\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "a71b9fbf-7f63-40d4-8f29-e306369af3c3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Creating helper functions for API calls\n",
+    "\n",
+    "def manage_package_dataset_metadata(method, endpoint, data, auth_token):\n",
+    "    data = str(data)\n",
+    "    headers = {'Content-type': 'application/json', \"Authorization\": f\"Bearer {auth_token}\"}\n",
+    "    \n",
+    "    if method == \"GET\":\n",
+    "        resp = requests.get(endpoint, headers=headers)\n",
+    "    if method == \"POST\":\n",
+    "        resp = requests.post(endpoint, data=data, headers=headers)\n",
+    "    if method == \"DELETE\":\n",
+    "        resp = requests.delete(endpoint, headers=headers)\n",
+    "    \n",
+    "    return(resp.json())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4d88fbf5-8e3a-49c0-b20b-f75dd004a529",
+   "metadata": {},
+   "source": [
+    "##### Let's create image dataset in the Vertex AI and import all images into our dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "54fa2a26-8779-4682-9d51-0690e9b65ce5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/bin/bash: -c: line 0: syntax error near unexpected token `('\n",
+      "/bin/bash: -c: line 0: `[Image Dataset](google-cloud/demos/files/images/gcp-console-vertex-ai-image-dataset.png)'\n"
+     ]
+    }
+   ],
+   "source": [
+    "![Image Dataset](google-cloud/demos/files/images/gcp-console-vertex-ai-image-dataset.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "00fcc891-6483-4b9d-9e0a-a91002702fdd",
+   "id": "3ef6de0a-71e5-4d9a-bf59-f9fda803ed75",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c1860a4d-8b4c-4672-b9d2-cbc21273a6fe",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "31566a8c-3d4c-4150-ac79-cb2eb1d4d9ba",
    "metadata": {},
    "outputs": [],
    "source": []
