--- a/demos/dm-01-automl-object-detection-using-api.ipynb
+++ b/demos/dm-01-automl-object-detection-using-api.ipynb
@@ -138,7 +138,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "![Image Dataset](files/images/gcp-console-vertex-ai-image-dataset.png)"
+    "![](files/images/gcp-console-vertex-ai-image-dataset.png)<!-- -->"
    ]
   },
   {
