Image file path edit

--- a/demos/dm-01-automl-object-detection-using-api.ipynb
+++ b/demos/dm-01-automl-object-detection-using-api.ipynb
@@ -138,7 +138,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "![](files/images/gcp-console-vertex-ai-image-dataset.png)<!-- -->"
+    "![](demos/files/images/gcp-console-vertex-ai-image-dataset.png)"
    ]
   },
   {
