--- a/demos/dm-01-automl-object-detection-using-api.ipynb
+++ b/demos/dm-01-automl-object-detection-using-api.ipynb
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "id": "ff9461ff-ff59-4b5d-b79e-cad0d1f56bea",
    "metadata": {},
    "outputs": [],
@@ -77,6 +77,7 @@
     "import json\n",
     "import requests\n",
     "from typing import List, Union\n",
+    "from IPython.display import Image\n",
     "\n",
     "from google.cloud import bigquery\n",
     "from google.cloud import aiplatform\n",
@@ -133,12 +134,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "54fa2a26-8779-4682-9d51-0690e9b65ce5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (441457304.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"/tmp/ipykernel_1/441457304.py\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    <img src=\\\"files/images/gcp-console-vertex-ai-image-dataset.png\\\">\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
-    "![](demos/files/images/gcp-console-vertex-ai-image-dataset.png)"
+    "<img src=\\\"files/images/gcp-console-vertex-ai-image-dataset.png\\\">"
    ]
   },
   {
