--- a/demos/dm-01-automl-object-detection-using-api.ipynb
+++ b/demos/dm-01-automl-object-detection-using-api.ipynb
@@ -134,19 +134,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24acfe63-a765-4d5a-9118-8b9c5ae66b78",
+   "id": "abaf061c-e09c-43f2-a5c3-68e71d47818a",
    "metadata": {},
    "source": [
-    "<img src=\"files/images/gcp-console-vertex-ai-image-dataset.png\">"
+    "![](files/images/gcp-console-vertex-ai-image-dataset.png)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c1860a4d-8b4c-4672-b9d2-cbc21273a6fe",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
