New images and description added.

--- a/demos/dm-01-automl-object-detection-using-api.ipynb
+++ b/demos/dm-01-automl-object-detection-using-api.ipynb
@@ -129,7 +129,9 @@
    "id": "4d88fbf5-8e3a-49c0-b20b-f75dd004a529",
    "metadata": {},
    "source": [
-    "##### Let's create image dataset in the Vertex AI and import all images into our dataset"
+    "##### Let's create image dataset in the Vertex AI and import all images into our dataset\n",
+    "\n",
+    "From the GCP console left task list pane, find and click on `Vertex AI` and then click on `Dataset` option to create a new dataset"
    ]
   },
   {
@@ -137,13 +139,67 @@
    "id": "abaf061c-e09c-43f2-a5c3-68e71d47818a",
    "metadata": {},
    "source": [
-    "![](files/images/gcp-console-vertex-ai-image-dataset.png)"
+    "![](files/images/dm-01-gcp-console-vertex-ai-image-dataset.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cac311e9-43ca-4924-b87b-24e55566ffc7",
+   "metadata": {},
+   "source": [
+    "Once you are in the dataset `Create dataset` page, provide a name for dataset. We name our dataset `package-detection-ds` for this demo. Next, select `IMAGE` as dataset type and click on `Image object detection` option. Let's keep region and other setting as default for now. Next, click on `CREATE` button to create a new dataset resoure in Vertex AI."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7f2cf660-3bb5-4dbf-b3c9-4e8005f146f5",
+   "metadata": {},
+   "source": [
+    "![](files/images/dm-02-gcp-console-vertex-ai-image-dataset-creation.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "753cef4f-d0d4-4176-88eb-cba1f1c340cc",
+   "metadata": {},
+   "source": [
+    "When the dataset is created, you will click on the dataset and import the images for labeling and training the model. You have following options to import images from within Verte AI dataset:\n",
+    "\n",
+    "- Upload from your local machine (limit 500 per upload)\n",
+    "- Upload import file from your local machine (this file will contains the path to images and other attributes)\n",
+    "- Select & import images from Cloud storage bucket (provide gcs location of the file. either jsonl or csv format)\n",
+    "\n",
+    "For this demo, we will use the file that we already have in the cloud stoage bucket and import. To do this, click on `IMPORT` pane and select `Select import files form Cloud Storage` option and provide path to the file and click on `BROWSE` button to select the gcs storage bucket and file. Lastly, click on `CONTINUE` button to import the images. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0f0362db-43c8-4c8c-bcd3-8cd81ca8f70e",
+   "metadata": {},
+   "source": [
+    "![](files/images/dm-03-gcp-console-vertex-ai-image-dataset-import.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e8d770b3-b5f2-4091-b6ca-fef199fd03d0",
+   "metadata": {},
+   "source": [
+    "Once, all the images have been imported (based on dataset size it could take a while to load everything), you can browse it from the `BROWSE` pane of the dataset. You'll be able to create new labels for images and create boundaries around the object that you are trying to detect in the images. For example in this demo, we are trying to identify what kind of packages was delivered at the door. The labels inclui"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9e3f12fa-7f84-4a39-b548-ca1fa5f52fc1",
+   "metadata": {},
+   "source": [
+    "![](files/images/dm-03-gcp-console-vertex-ai-image-dataset-browse.png)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31566a8c-3d4c-4150-ac79-cb2eb1d4d9ba",
+   "id": "361af707-eb45-438f-b686-d59cf35acfa0",
    "metadata": {},
    "outputs": [],
    "source": []
