Console dataset images and description

--- a/demos/dm-01-automl-object-detection-using-api.ipynb
+++ b/demos/dm-01-automl-object-detection-using-api.ipynb
@@ -185,7 +185,12 @@
    "id": "e8d770b3-b5f2-4091-b6ca-fef199fd03d0",
    "metadata": {},
    "source": [
-    "Once, all the images have been imported (based on dataset size it could take a while to load everything), you can browse it from the `BROWSE` pane of the dataset. You'll be able to create new labels for images and create boundaries around the object that you are trying to detect in the images. For example in this demo, we are trying to identify what kind of packages was delivered at the door. The labels inclui"
+    "Once, all the images have been imported (based on dataset size it could take a while to load everything), you can browse it from the `BROWSE` pane of the dataset. You'll be able to create new labels for images and create boundaries around the object that you are trying to detect in the images. For example in this demo, we are trying to identify what kind of packages was delivered at the door. The labels are as follows:\n",
+    "\n",
+    "- small_packages\n",
+    "- medium_packages\n",
+    "- big_packages\n",
+    "- envelopes"
    ]
   },
   {
