Added training pipeline code

--- a/demos/dm-01-automl-object-detection-using-api.ipynb
+++ b/demos/dm-01-automl-object-detection-using-api.ipynb
@@ -202,9 +202,77 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "00cebe7f-acc6-442f-9cf6-8c01dc52f470",
+   "metadata": {},
+   "source": [
+    "After labeling all the images in our dataset, we are now ready to train the model. To do this, we will be using Vertex AI APIs. First, will create a function that will take custom inputs and starts the `Vertex AI training` resource.\n",
+    "\n",
+    "Below are the function input description:\n",
+    "\n",
+    "- `project`: your gcp project id\n",
+    "- `display_name`: vertex ai training resournce name in the console\n",
+    "- `dataset_id`: dataset id from previous step (check console->vertex ai->datasets->ID)\n",
+    "- `model_display_name`: trained model name shown in console\n",
+    "- `location`: location of your image dataset\n",
+    "- `api_endpoint`: gcp vertex ai api endpoint"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "e883838f-062d-4ba4-a052-6c3205a12a8e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Training automl function\n",
+    "\n",
+    "def train_package_size_detection(\n",
+    "    project: str,\n",
+    "    display_name: str,\n",
+    "    dataset_id: str,\n",
+    "    model_display_name: str,\n",
+    "    location: str = \"us-central1\",\n",
+    "    api_endpoint: str = \"us-central1-aiplatform.googleapis.com\",\n",
+    "):\n",
+    "    # The AI Platform services require regional API endpoints.\n",
+    "    client_options = {\"api_endpoint\": api_endpoint}\n",
+    "    \n",
+    "    # Initialize client that will be used to create and send requests. This only needs to be created once. \n",
+    "    aip_client = aiplatform.gapic.PipelineServiceClient(client_options=client_options)\n",
+    "    \n",
+    "    training_inputs = trainingjob.definition.AutoMlImageObjectDetectionInputs(\n",
+    "        model_type=\"CLOUD_HIGH_ACCURACY_1\", # goal is to train a model with high accuracy as opposed to low latency serving here\n",
+    "        budget_milli_node_hours=20000,      # this is the minimum numbee of node hours requires to train object detection model\n",
+    "        disable_early_stopping=False,\n",
+    "    ).to_value()\n",
+    "\n",
+    "    training_pipeline = {\n",
+    "        \"display_name\": display_name,\n",
+    "        \"training_task_definition\": \"gs://google-cloud-aiplatform/schema/trainingjob/definition/automl_image_object_detection_1.0.0.yaml\",\n",
+    "        \"training_task_inputs\": training_inputs,\n",
+    "        \"input_data_config\": {\"dataset_id\": dataset_id},\n",
+    "        \"model_to_upload\": {\"display_name\": model_display_name},\n",
+    "    }\n",
+    "    parent = f\"projects/{project}/locations/{location}\"\n",
+    "    response = aip_client.create_training_pipeline(\n",
+    "        parent=parent, training_pipeline=training_pipeline\n",
+    "    )\n",
+    "    print(\"response:\", response)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "763fc781-fc27-4279-b944-7b928d7c8c14",
+   "metadata": {},
+   "source": [
+    "Let's train the model now"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "361af707-eb45-438f-b686-d59cf35acfa0",
+   "id": "f7ac8adc-5f11-4f58-9761-308288209afc",
    "metadata": {},
    "outputs": [],
    "source": []
