Model training, evaluation, endpoint and deployment code added

--- a/demos/dm-01-automl-object-detection-using-api.ipynb
+++ b/demos/dm-01-automl-object-detection-using-api.ipynb
@@ -5,7 +5,7 @@
    "id": "6b990a00-8a5b-4447-add3-3c87e8af6b68",
    "metadata": {},
    "source": [
-    "# Vertex AI - Object detection using AutoML (using APIs)"
+    "# Train an image object detection model using Vertex AI AutoML (using APIs)"
    ]
   },
   {
@@ -31,7 +31,7 @@
    "id": "eda3d560-d8ea-4376-b737-798f6fee661b",
    "metadata": {},
    "source": [
-    " - Images dataset with object to identify"
+    " - Images dataset with objects to identify"
    ]
   },
   {
@@ -39,7 +39,7 @@
    "id": "8711195d-e8ca-4945-a4e1-461f5a548d37",
    "metadata": {},
    "source": [
-    "### Items Covered in this notebook"
+    "### Objectives"
    ]
   },
   {
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "ff9461ff-ff59-4b5d-b79e-cad0d1f56bea",
    "metadata": {},
    "outputs": [],
@@ -75,18 +75,20 @@
     "# Load required packages to run the notebook\n",
     "\n",
     "import json\n",
+    "import re\n",
     "import requests\n",
+    "import base64\n",
     "from typing import List, Union\n",
     "from IPython.display import Image\n",
     "\n",
     "from google.cloud import bigquery\n",
     "from google.cloud import aiplatform\n",
-    "from google.cloud.aiplatform.gapic.schema import trainingjob"
+    "from google.cloud.aiplatform.gapic.schema import trainingjob, predict"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "214c27bf-6326-4056-b00e-641143102492",
    "metadata": {},
    "outputs": [],
@@ -103,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "a71b9fbf-7f63-40d4-8f29-e306369af3c3",
    "metadata": {},
    "outputs": [],
@@ -220,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "e883838f-062d-4ba4-a052-6c3205a12a8e",
    "metadata": {},
    "outputs": [],
@@ -266,13 +268,345 @@
    "id": "763fc781-fc27-4279-b944-7b928d7c8c14",
    "metadata": {},
    "source": [
-    "Let's train the model now"
+    "Let's train the model now:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "f7ac8adc-5f11-4f58-9761-308288209afc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "response: name: \"projects/474014863033/locations/us-central1/trainingPipelines/554086790189809664\"\n",
+      "display_name: \"package_size_detection_model_v1\"\n",
+      "input_data_config {\n",
+      "  dataset_id: \"4715062101670887424\"\n",
+      "}\n",
+      "training_task_definition: \"gs://google-cloud-aiplatform/schema/trainingjob/definition/automl_image_object_detection_1.0.0.yaml\"\n",
+      "training_task_inputs {\n",
+      "  struct_value {\n",
+      "    fields {\n",
+      "      key: \"budgetMilliNodeHours\"\n",
+      "      value {\n",
+      "        string_value: \"20000\"\n",
+      "      }\n",
+      "    }\n",
+      "    fields {\n",
+      "      key: \"modelType\"\n",
+      "      value {\n",
+      "        string_value: \"CLOUD_HIGH_ACCURACY_1\"\n",
+      "      }\n",
+      "    }\n",
+      "  }\n",
+      "}\n",
+      "model_to_upload {\n",
+      "  display_name: \"package_size_detection_model_v1\"\n",
+      "}\n",
+      "state: PIPELINE_STATE_PENDING\n",
+      "create_time {\n",
+      "  seconds: 1643244004\n",
+      "  nanos: 584731000\n",
+      "}\n",
+      "update_time {\n",
+      "  seconds: 1643244004\n",
+      "  nanos: 584731000\n",
+      "}\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Start the training pipeline \n",
+    "train_package_size_detection(PROJECT_ID,  \n",
+    "                             \"package_size_detection_model_v1\", \n",
+    "                             DATASET_ID,\n",
+    "                             \"package_size_detection_model_v1\"\n",
+    "                            )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7f7f6f53-f187-4041-8cb7-43e25341dd23",
+   "metadata": {},
+   "source": [
+    "Once the model has been trained, you see that model resource in the Vertex AI `Training` page. Now we will evaulate the trained model. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "137f8e5e-643d-4dbf-820c-f789323d3e7e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'5589020189002825728'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Get evaluation id\n",
+    "import re\n",
+    "model_client = aiplatform.gapic.ModelServiceClient(\n",
+    "        client_options={\n",
+    "            'api_endpoint':'us-central1-aiplatform.googleapis.com'\n",
+    "            }\n",
+    "        )\n",
+    "\n",
+    "evaluations = model_client.list_model_evaluations(parent=f'projects/{PROJECT_ID}/locations/{LOCATION}/models/2221017886154031104')  \n",
+    "for val in evaluations:\n",
+    "    res = re.search('evaluations/(.*)', val.name)\n",
+    "    \n",
+    "eval_id = res.group(1)\n",
+    "eval_id"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "1f53fa70-0a6e-4a19-9c8d-5196b7fcaa8b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Funtion to get aggregated evaluation metrices\n",
+    "\n",
+    "def evaluate_package_size_detection(\n",
+    "    project: str,\n",
+    "    model_id: str,\n",
+    "    evaluation_id: str,\n",
+    "    location: str = \"us-central1\",\n",
+    "    api_endpoint: str = \"us-central1-aiplatform.googleapis.com\",\n",
+    "):\n",
+    "   \n",
+    "    # The AI Platform services require regional API endpoints.\n",
+    "    client_options = {\"api_endpoint\": api_endpoint}\n",
+    "    \n",
+    "    client = aiplatform.gapic.ModelServiceClient(client_options=client_options)\n",
+    "    name = client.model_evaluation_path(\n",
+    "        project=project, location=location, model=model_id, evaluation=evaluation_id\n",
+    "    )\n",
+    "    response = client.get_model_evaluation(name=name)\n",
+    "    print(\"response:\", response)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f7ac8adc-5f11-4f58-9761-308288209afc",
+   "id": "4496a99f-9367-4c0c-8ea0-56522aa40077",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Evaluate model\n",
+    "evaluate_package_size_detection(PROJECT_ID,  \n",
+    "                             \"2221017886154031104\", #TODO: fetch this using api\n",
+    "                             eval_id\n",
+    "                            )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9e3e62a2-bfe6-4846-b3db-7472617c7b35",
+   "metadata": {},
+   "source": [
+    "Let's create an endpoint to deploy model to."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "9d144d9f-b36d-4588-abe1-82dcae7e3fd9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_endpoint(\n",
+    "    project: str, display_name: str, location: str,\n",
+    "):\n",
+    "    aiplatform.init(project=project, location=location)\n",
+    "\n",
+    "    endpoint = aiplatform.Endpoint.create(\n",
+    "        display_name=display_name, project=project, location=location,\n",
+    "    )\n",
+    "\n",
+    "    print(endpoint.display_name)\n",
+    "    print(endpoint.resource_name)\n",
+    "    return endpoint\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "0f8c0177-0c6a-4af7-acff-e5de3a5c94b8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:google.cloud.aiplatform.models:Creating Endpoint\n",
+      "INFO:google.cloud.aiplatform.models:Create Endpoint backing LRO: projects/474014863033/locations/us-central1/endpoints/609331751927414784/operations/2692660614433603584\n",
+      "INFO:google.cloud.aiplatform.models:Endpoint created. Resource name: projects/474014863033/locations/us-central1/endpoints/609331751927414784\n",
+      "INFO:google.cloud.aiplatform.models:To use this Endpoint in another session:\n",
+      "INFO:google.cloud.aiplatform.models:endpoint = aiplatform.Endpoint('projects/474014863033/locations/us-central1/endpoints/609331751927414784')\n",
+      "package-object-detection-endpoint\n",
+      "projects/474014863033/locations/us-central1/endpoints/609331751927414784\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<google.cloud.aiplatform.models.Endpoint object at 0x7f296d6d0650> \n",
+       "resource name: projects/474014863033/locations/us-central1/endpoints/609331751927414784"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "create_endpoint(PROJECT_ID, \"package-object-detection-endpoint\", \"us-central1\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9e39210a-32e3-4824-95b2-09380cc74423",
+   "metadata": {},
+   "source": [
+    "Deploy model to this endpoint"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0e9aa4d7-13c0-41d1-9961-85bbad923f2b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#deploying the model to endpoint\n",
+    "\n",
+    "def deploy_package_detection_model(\n",
+    "    project: str,\n",
+    "    location: str,\n",
+    "    model_name: str,  # fully qualified name: projects/project_number/locations/location_name/models/model_number\n",
+    "    endpoint: Optional[aiplatform.Endpoint] = None,\n",
+    "    deployed_model_display_name: Optional[str] = None,\n",
+    "    traffic_percentage: Optional[int] = 0,\n",
+    "    traffic_split: Optional[Dict[str, int]] = None,\n",
+    "    min_replica_count: int = 1,\n",
+    "    max_replica_count: int = 1,\n",
+    "    metadata: Optional[Sequence[Tuple[str, str]]] = (),\n",
+    "    sync: bool = True,\n",
+    "):\n",
+    "\n",
+    "    aiplatform.init(project=project, location=location)\n",
+    "    model = aiplatform.Model(model_name=model_name)\n",
+    "\n",
+    "    model.deploy(\n",
+    "        endpoint=endpoint,\n",
+    "        deployed_model_display_name=deployed_model_display_name,\n",
+    "        traffic_percentage=traffic_percentage,\n",
+    "        traffic_split=traffic_split,\n",
+    "        min_replica_count=min_replica_count,\n",
+    "        max_replica_count=max_replica_count,\n",
+    "        metadata=metadata,\n",
+    "        sync=sync,\n",
+    "    )\n",
+    "\n",
+    "    model.wait()\n",
+    "\n",
+    "    print(model.display_name)\n",
+    "    print(model.resource_name)\n",
+    "    return model\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c1822a1e-5203-4629-b2db-62196bbf921b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "deploy_package_detection_model(PROJECT_ID, LOCATION, model_path)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f2ffab18-a1d2-4a28-a5a0-b12085cb1e9c",
+   "metadata": {},
+   "source": [
+    "Get predictions from model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5da197d3-b7e3-4c6b-84f4-80ab49e56737",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def get_package_detection_predictions(\n",
+    "    project: str,\n",
+    "    endpoint_id: str,\n",
+    "    filename: str,\n",
+    "    location: str = \"us-central1\",\n",
+    "    api_endpoint: str = \"us-central1-aiplatform.googleapis.com\",\n",
+    "):\n",
+    "    # The AI Platform services require regional API endpoints.\n",
+    "    client_options = {\"api_endpoint\": api_endpoint}\n",
+    "    client = aiplatform.gapic.PredictionServiceClient(client_options=client_options)\n",
+    "    \n",
+    "    with open(filename, \"rb\") as f:\n",
+    "        file_content = f.read()\n",
+    "\n",
+    "    # The format of each instance should conform to the deployed model's prediction input schema.\n",
+    "    encoded_content = base64.b64encode(file_content).decode(\"utf-8\")\n",
+    "    instance = predict.instance.ImageObjectDetectionPredictionInstance(\n",
+    "        content=encoded_content,\n",
+    "    ).to_value()\n",
+    "    instances = [instance]\n",
+    "    \n",
+    "    # See gs://google-cloud-aiplatform/schema/predict/params/image_object_detection_1.0.0.yaml for the format of the parameters.\n",
+    "    parameters = predict.params.ImageObjectDetectionPredictionParams(\n",
+    "        confidence_threshold=0.5, max_predictions=5,\n",
+    "    ).to_value()\n",
+    "    endpoint = client.endpoint_path(\n",
+    "        project=project, location=location, endpoint=endpoint_id\n",
+    "    )\n",
+    "    response = client.predict(\n",
+    "        endpoint=endpoint, instances=instances, parameters=parameters\n",
+    "    )\n",
+    "    print(\"response\")\n",
+    "    print(\" deployed_model_id:\", response.deployed_model_id)\n",
+    "    # See gs://google-cloud-aiplatform/schema/predict/prediction/image_object_detection_1.0.0.yaml for the format of the predictions.\n",
+    "    predictions = response.predictions\n",
+    "    for prediction in predictions:\n",
+    "        print(\" prediction:\", dict(prediction))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bd0915c4-cf97-45d2-8a11-0a398cde727a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "get_package_detection_predictions(PROJECT_ID, LOCATION, model_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "473971cc-eb26-4a79-b3cb-2253f79aa017",
    "metadata": {},
    "outputs": [],
    "source": []
