Image file path modified

--- a/demos/dm-01-automl-object-detection-using-api.ipynb
+++ b/demos/dm-01-automl-object-detection-using-api.ipynb
@@ -141,7 +141,8 @@
    "id": "abaf061c-e09c-43f2-a5c3-68e71d47818a",
    "metadata": {},
    "source": [
-    "![](files/images/dm-01-gcp-console-vertex-ai-image-dataset.png)"
+    "![](files/images/dm-01-gcp-console-vertex-ai-image-dataset.png)\n",
+    "![](demos/files/images/dm-01-gcp-console-vertex-ai-image-dataset.png)"
    ]
   },
   {
