Image path change

--- a/demos/dm-01-automl-object-detection-using-api.ipynb
+++ b/demos/dm-01-automl-object-detection-using-api.ipynb
@@ -146,6 +146,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e47b49bb-2bcf-4f3c-9ed0-fd605052f414",
+   "metadata": {},
+   "source": [
+    "<img src=\"https://github.com/nishitpatel01/google-cloud/blob/main/demos/files/images/dm-01-gcp-console-vertex-ai-image-dataset.png\" />"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "cac311e9-43ca-4924-b87b-24e55566ffc7",
    "metadata": {},
    "source": [
