Imgage path changed

--- a/demos/dm-01-automl-object-detection-using-api.ipynb
+++ b/demos/dm-01-automl-object-detection-using-api.ipynb
@@ -154,6 +154,22 @@
   },
   {
    "cell_type": "markdown",
+   "id": "800324a5-015a-4b61-b3e5-d0c6ab9dd9aa",
+   "metadata": {},
+   "source": [
+    "![](https://github.com/nishitpatel01/google-cloud/blob/main/demos/files/images/dm-01-gcp-console-vertex-ai-image-dataset.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0bec93ea-9bcc-4446-b8c6-64e97d8a6647",
+   "metadata": {},
+   "source": [
+    "![](files/images/dm-01-gcp-console-vertex-ai-image-dataset-creation.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "cac311e9-43ca-4924-b87b-24e55566ffc7",
    "metadata": {},
    "source": [
