--- a/demos/dm-01-automl-object-detection-using-api.ipynb
+++ b/demos/dm-01-automl-object-detection-using-api.ipynb
@@ -149,7 +149,7 @@
    "id": "e47b49bb-2bcf-4f3c-9ed0-fd605052f414",
    "metadata": {},
    "source": [
-    "<img src=\"https://github.com/nishitpatel01/google-cloud/blob/main/demos/files/images/dm-01-gcp-console-vertex-ai-image-dataset.png\" />"
+    "<img src=\\ \"https://github.com/nishitpatel01/google-cloud/blob/main/demos/files/images/dm-01-gcp-console-vertex-ai-image-dataset.png\" />"
    ]
   },
   {
@@ -157,7 +157,7 @@
    "id": "800324a5-015a-4b61-b3e5-d0c6ab9dd9aa",
    "metadata": {},
    "source": [
-    "![](https://github.com/nishitpatel01/google-cloud/blob/main/demos/files/images/dm-01-gcp-console-vertex-ai-image-dataset.png)"
+    "![](\"https://github.com/nishitpatel01/google-cloud/blob/main/demos/files/images/dm-01-gcp-console-vertex-ai-image-dataset.png\")"
    ]
   },
   {
